Add link to content data for each page.
Initial commit to check in integration.

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -8,10 +8,10 @@
     <h3>Writing and publishing</h3>
     <ul>
     <li><%= link_to('Content Data',
-                    content_data_base_url,
+                    content_data_home_url,
                     data: {
                         track_category: 'external-link-clicked',
-                        track_action: content_data_base_url,
+                        track_action: content_data_home_url,
                         track_label: 'Content Data'
                     })%>
     </li>
